v1.0.1
----------------------------------------------------------------------------------------------------
 * ServerName/Alias names from pure-http: virtual hosts are no longer aut-added to a Managed Domain.
   Fixes issue #57.

v1.0.0
----------------------------------------------------------------------------------------------------
 * New directive 'MDNotifyCmd' that will run when Managed Domains have been signed up/renewed. The
   names of the MDs is given as arguments to the command.

v0.9.9
----------------------------------------------------------------------------------------------------
 * Protocol driving now *applies* correct server properties for http/https challenge selection, 
   with new test cases (fixes issue #52).

v0.9.8
----------------------------------------------------------------------------------------------------
 * Protocol driving now uses correct server properties for http/https challenge selection 
   (refs issue #52).

v0.9.7
----------------------------------------------------------------------------------------------------
 * When building against 2.4.x, one probably needs to configure without ```--enable-werror```,
   since there were some warnings fixed in Apache httpd trunk.
 * Removed obsolete function from interface to mod_ssl. Module now requires at least mod_ssl
   patch v4 in place.
 * Fallback certificates has version set and no longer claims to be a CA. (re issue #32)
 * ```MDRequireHttps``` now happens before any ```Redirect```.
 * added some compiler warning flags and adding casts/eliminating some unused params accordingly

v0.9.6
----------------------------------------------------------------------------------------------------
 * For Managed Domains with 'MDRequireHttps permanent' a HSTS (rfc6797) header is added
   in the response with value 'max-age=15768000', if not already there.

v0.9.5
----------------------------------------------------------------------------------------------------